# ClauseMind

./: .gitignore  README.md  vercel.json
api/: review.py
precedent/: .env.example  .gitignore  CONTEXT.md  docker-compose.yml  pyproject.toml  report-v2.md  report.md  vercel.json
precedent/api/: review.py
precedent/data/eval/: retrieval_ablation.json
precedent/data/synthetic/: contracts.json  counterparties.json  playbook.json
precedent/data/synthetic/incoming/: incoming_clean.json  incoming_injection.json  incoming_meridian.json  incoming_meridian_v2.json
precedent/frontend/: index.html
precedent/scripts/: demo.py  eval_retrieval.py  generate_corpus.py  init_db.py  run_pipeline.py  seed_memory.py
precedent/src/precedent/: __init__.py  config.py  models.py
precedent/src/precedent/agents/: __init__.py  analysis.py  composer.py  intake.py  redline.py  retrieval_agent.py  root.py
precedent/src/precedent/agents/tools/: __init__.py  ingest.py
precedent/src/precedent/api/: __init__.py  main.py
precedent/src/precedent/governance/: __init__.py  base.py  local_adapter.py  lyzr_adapter.py
precedent/src/precedent/memory/: __init__.py  flywheel.py  profiles.py  retrieval.py  store.py
precedent/src/precedent/telemetry/: __init__.py
precedent/tests/: test_api_service.py  test_flywheel.py  test_governance.py  test_ingest.py  test_models.py  test_redline_loop.py  test_retrieval.py  test_store.py
