[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "precedent"
version = "0.1.0"
description = "Contract intelligence agent with institutional negotiation memory."
readme = "CONTEXT.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Precedent" }]

dependencies = [
    "google-adk>=0.2.0",
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "pytest>=8.2",
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/precedent"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
